<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_view_signup_activity_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Register"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_text_email_activity_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_signup_activity_signup"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edit_text_password_activity_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_email_activity_signup"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:maxLines="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:singleLine="true" />

        <TextView
            android:gravity="center"
            android:id="@+id/login_page"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dip"
            android:text="@string/member_login"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_below="@id/edit_text_password_activity_signup"
            android:layout_marginTop="10dip"/>

        <Button
            android:id="@+id/button_next_activity_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/login_page"
            android:layout_marginTop="0dip"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingBottom="10dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="10dp"
            android:text="REGISTER"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:background="@color/colorAccent"/>

    </RelativeLayout>

    <!--for progress loading-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_progress_activity_signup"
        android:background="@android:color/black"
        android:alpha="0.7"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progressBar" />

    </RelativeLayout>
</RelativeLayout>